// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`minimal uminimalThreeNodeReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      439.99780677462047,
      399.5811286353502,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      439.99122733899384,
      399.1623032046657,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      439.98026241462924,
      398.7435696368749,
      100,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`minimal uminimalThreeNodeReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific uconnectDotsReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 1,
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9983550696912,
      399.37168434022965,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      459.4550402118889,
      295.76421826741705,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      459.4550402118889,
      295.76421826741705,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      339.45668514219767,
      296.3925339271874,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      339.45668514219767,
      296.3925339271874,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      280.00164493030877,
      400.62831565977035,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.00164493030877,
      400.62831565977035,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      340.544959788111,
      504.2357817325829,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      340.544959788111,
      504.2357817325829,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      460.5433148578022,
      503.60746607281266,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 1,
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9934203238614,
      398.7433859060505,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      458.9084504338169,
      295.4543426655773,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      458.9084504338169,
      295.4543426655773,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      338.91503010995547,
      296.71095675952677,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      338.91503010995547,
      296.71095675952677,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      280.0065796761386,
      401.25661409394945,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.0065796761386,
      401.25661409394945,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      341.09154956618306,
      504.5456573344227,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      341.09154956618306,
      504.5456573344227,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      461.0849698900445,
      503.2890432404733,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 1,
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9851958977993,
      398.1151219225815,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      458.36024565081885,
      295.1473332357442,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      458.36024565081885,
      295.1473332357442,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      338.37504975301965,
      297.03221131316263,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      338.37504975301965,
      297.03221131316263,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      280.01480410220074,
      401.8848780774185,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.01480410220074,
      401.8848780774185,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      341.6397543491811,
      504.8526667642558,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      341.6397543491811,
      504.8526667642558,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      461.62495024698035,
      502.9677886868374,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific uconnectDotsReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific upolygonReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9983550696912,
      399.37168434022965,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      436.48396731105885,
      285.68062224956964,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      302.54997677298326,
      329.9750546372659,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      303.2886061301781,
      471.04158145590634,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      437.6790947160885,
      513.9310573170285,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "kind": "property",
    "name": "fillStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9934203238614,
      398.7433859060505,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      435.8848950707304,
      285.4911605780468,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      302.1846645125735,
      330.4862593188785,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      303.66190297706623,
      471.54698499587386,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      438.2751171157684,
      513.7322092011502,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "kind": "property",
    "name": "fillStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9851958977993,
      398.1151219225815,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      435.2848390278765,
      285.30483822420035,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      301.82203390899724,
      330.9993697548066,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      304.03784098154915,
      472.05042703910607,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [
      438.8700901837779,
      513.5302430593055,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "closePath",
  },
  {
    "kind": "property",
    "name": "fillStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "args": [],
    "kind": "method",
    "name": "fill",
  },
]
`;

exports[`node_specific upolygonReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific ulinesThroughPointReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(76.5, 76.5, 89.25, 0.5)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      639.9868406477228,
      397.486771812101,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      160.0131593522771,
      402.5132281878989,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      640.3219377394427,
      429.48501723179737,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      639.651743556003,
      365.4885263924046,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      607.9885952280265,
      397.82186890382087,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.9850860674192,
      397.1516747203811,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      159.67806226055725,
      370.5149827682025,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      160.34825644399697,
      434.5114736075953,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      192.0114047719735,
      402.1781310961791,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      128.01491393258073,
      402.84832527961873,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(76.5, 76.5, 89.25, 0.5)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      639.9473640339629,
      394.97381922799434,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      160.05263596603706,
      405.02618077200566,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      640.6175214702304,
      426.9668010991894,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      639.2772065976955,
      362.98083735679927,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      607.9543821627678,
      395.64397666426174,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.940345905158,
      394.30366179172694,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      159.38247852976963,
      373.0331989008106,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      160.7227934023045,
      437.01916264320073,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      192.0456178372321,
      404.35602333573826,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      128.05965409484202,
      405.69633820827306,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(76.5, 76.5, 89.25, 0.5)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      240,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      639.8815744877757,
      392.4614178212492,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      160.1184255122244,
      407.53858217875074,
      6,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      640.8867187782757,
      424.4456277529526,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      638.8764301972756,
      360.4772078895458,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      607.8973645560723,
      393.4665621117493,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      671.865784419479,
      391.4562735307491,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      159.11328122172432,
      375.55437224704735,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      161.1235698027245,
      439.52279211045413,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      192.10263544392782,
      406.53343788825066,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      128.134215580521,
      408.5437264692508,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific ulinesThroughPointReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific utimedLineArrayReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      459.9991775348456,
      399.6858421701148,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      369.72834257109884,
      348.1962669635937,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      370.2724798940555,
      452.1178908662914,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      539.9993091282602,
      399.5601777519769,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      329.61944819593236,
      278.97695290666763,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      330.38124267580747,
      521.4628693413555,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      459.9967101619307,
      399.3716929530253,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      369.45751505497776,
      348.3554783797634,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      370.54577478309153,
      452.27282866721134,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      539.9972365198591,
      399.12035984482173,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      329.2395910194972,
      279.19865679177246,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      330.76317246064355,
      521.6809833634056,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      459.99259794889963,
      399.05756096129073,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      369.1875248765098,
      348.5161056565813,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      370.81987717459054,
      452.4263333821279,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      539.993782195253,
      398.68055061935985,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      328.86043221973154,
      279.42155293736533,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      331.1457855850155,
      521.8978964432748,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific utimedLineArrayReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 1,
  },
  {
    "args": [
      459.9991775348456,
      399.6858421701148,
      539.9993091282602,
      399.5601777519769,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": ,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      459.9991775348456,
      399.6858421701148,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      539.9993091282602,
      399.5601777519769,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      369.72834257109884,
      348.1962669635937,
      329.61944819593236,
      278.97695290666763,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": ,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      369.72834257109884,
      348.1962669635937,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      329.61944819593236,
      278.97695290666763,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      370.2724798940555,
      452.1178908662914,
      330.38124267580747,
      521.4628693413555,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": ,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      370.2724798940555,
      452.1178908662914,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      330.38124267580747,
      521.4628693413555,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific ucircleReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9983550696912,
      399.37168434022965,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9934203238614,
      398.7433859060505,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9851958977993,
      398.1151219225815,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific ucircleReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`node_specific utimedLineReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      479.9989033797941,
      399.58112289348645,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.000592175777,
      400.37699049830553,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      479.99561354924094,
      399.1622572707003,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.0023686972636,
      400.75397727586704,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      479.99013059853286,
      398.74341461505435,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.005329546926,
      401.13095661197724,
      4,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`node_specific utimedLineReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      479.9989033797941,
      399.58112289348645,
      280.000592175777,
      400.37699049830553,
    ],
    "kind": "method",
    "name": "createLinearGradient",
  },
  {
    "args": [
      0,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "args": [
      1,
      "rgba(255, 255, 255, 1)",
    ],
    "kind": "method",
    "name": "gradient.addColorStop",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": ,
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 1,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      479.9989033797941,
      399.58112289348645,
    ],
    "kind": "method",
    "name": "moveTo",
  },
  {
    "args": [
      280.000592175777,
      400.37699049830553,
    ],
    "kind": "method",
    "name": "lineTo",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayMixedValuesReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      400,
      400,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayMixedValuesReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array uarrayStaticValuesReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 0, 0, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      480,
      320,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(0, 255, 0, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      600,
      200,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(0, 0, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      720,
      320,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 0, 0, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      480,
      320,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(0, 255, 0, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      600,
      200,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(0, 0, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      720,
      320,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 0, 0, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      480,
      320,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(0, 255, 0, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      600,
      200,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(0, 0, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      720,
      320,
      20,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayStaticValuesReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;

exports[`value_array uarrayReferenceReferenceGraph.ts 1`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9934203238614,
      398.7433859060505,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      398.7433859060505,
      280.0065796761386,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.0065796761386,
      401.25661409394945,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      401.2566140939495,
      519.9934203238614,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9736820169815,
      397.48690961399717,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      397.48690961399717,
      280.02631798301854,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.02631798301854,
      402.51309038600283,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      402.5130903860028,
      519.9736820169815,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      519.9407872438878,
      396.2307089106246,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      396.2307089106246,
      280.0592127561122,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      280.0592127561122,
      403.7692910893754,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
  {
    "kind": "property",
    "name": "strokeStyle",
    "value": "rgba(255, 255, 255, 1)",
  },
  {
    "kind": "property",
    "name": "lineWidth",
    "value": 2,
  },
  {
    "args": [],
    "kind": "method",
    "name": "beginPath",
  },
  {
    "args": [
      403.7692910893754,
      519.9407872438878,
      8,
      0,
      6.283185307179586,
    ],
    "kind": "method",
    "name": "arc",
  },
  {
    "args": [],
    "kind": "method",
    "name": "stroke",
  },
]
`;

exports[`value_array uarrayReferenceReferenceGraph.ts 2`] = `
[
  {
    "args": [
      0,
      0,
      800,
      800,
    ],
    "kind": "method",
    "name": "clearRect",
  },
]
`;
